# TriviaApp

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
trivia_app/: django-entrypoint.sh  manage.py
trivia_app/trivia/: admin.py  models.py  producer.py  serializers.py  urls.py  views.py
trivia_app/trivia/migrations/: 0001_initial.py  0002_answer_answered_user.py  0003_alter_answer_answered_user.py
trivia_app/trivia_app/: asgi.py  default_mixin.py  exceptions.py  settings.py  urls.py  wsgi.py
trivia_app/trivia_user/: admin.py  apps.py  backends.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
trivia_app/trivia_user/migrations/: 0001_initial.py  0002_alter_user_options_user_date_joined_user_first_name_and_more.py  0003_user_refresh_token.py
trivia_client/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
trivia_client/src/: index.html
trivia_client/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  trivia.service.ts  trivia.ts
trivia_client/src/app/_components/: alert.component.ts
trivia_client/src/app/_helpers/: auth.guard.ts  error.interceptor.ts  jwt.interceptor.ts
trivia_client/src/environments/: environment.ts
trivia_microservice/: Dockerfile  main.py  settings.py
trivia_microservice/trivia_microservice/: database.py
trivia_microservice/trivia_microservice/models/: statistics.py
(+17 files in other folders)
