[tool.poetry]
name = "trivia_app"
version = "0.1.0"
description = ""
authors = ["Anton <antonzakhlebayeu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
django-rest-framework = "^0.1.0"
PyJWT = "^2.4.0"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.0"
model-bakery = "^1.6.0"
apiclient = "^1.0.4"
DateTime = "^4.5"
django-cors-headers = "^3.13.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
aioredis = "^2.0.1"
aiokafka = "^0.7.2"
kafka = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
